--- a/10-rock-paper-scissors.html
+++ b/10-rock-paper-scissors.html
@@ -10,7 +10,7 @@
         rel- the kind of file we want to use
         href- the place where the file is located 
        --> 
-    <link rel="stylesheet" href="10-rock-paper-scissors.css">
+    <link rel="stylesheet" href="styles/10-rock-paper-scissors.css">
 
 </head>
 
@@ -77,7 +77,7 @@
 
 
 
- <script src="10-rock-paper-scissors.js"></script>
+ <script src="scripts/10-rock-paper-scissors.js"></script>
 </body>
 
 </html>
