--- a/Bullshit.html
+++ b/Bullshit.html
@@ -2,31 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title> Dom Projects </title>  <!-- Title of the page tab -->
+    <title> Arrays and Loops </title>  <!-- Title of the page tab -->
    
 </head>
+
 <body>
- <p>Head / Tails job</p>
-
- <button class="head-button" onclick="
- resultText(document.querySelector('.head-button').innerHTML);
- ">Head</button>
-
- <button class="tails-button" onclick="
- resultText(document.querySelector('.tails-button').innerHTML);
- ">Tails</button>
-
- <p class="result"></p>
-
-    
-    <script>
-     function resultText(Text)
-     {
-      //console.log(`You chose: ${Text}`);
-      document.querySelector('.result').innerHTML=`You chose: ${Text}`;
-     }
-   
-
-    </script>
+ <p>hellow</p>
+ <script>
+    let arr = {
+        name: 'Maor',
+        age: 20 
+    };
+    console.log(arr);
+ </script>
 </body>
 </html>
